@startuml

title __CANVAS's Class Diagram__\n

  package nl.hhs.project.koffieapp.koffieapp {
    package nl.hhs.project.koffieapp.koffieapp.model {
      package nl.hhs.project.koffieapp.koffieapp.model.Canvas {
        class Canvas {
            - id : long
            - description : String
            - chairs : List<Chair>
            + addChair()
            + removeChair()
            + Canvas()
            + getId()
            + getDescription()
            + getDepartment()
            + getCoffeeMachine()
            + getChairs()
            + setId()
            + setDescription()
            + setDepartment()
            + setCoffeeMachine()
            + setChairs()
            + equals()
            + hashCode()
            # canEqual()
            + toString()
        }
      }
    }
  }
  

  package nl.hhs.project.koffieapp.koffieapp {
    package nl.hhs.project.koffieapp.koffieapp.model {
      package nl.hhs.project.koffieapp.koffieapp.model.Canvas {
        abstract class CanvasObject {
            - id : long
            - topPos : int
            - leftPos : int
            - rotation : int
            + CanvasObject()
            + getId()
            + getTopPos()
            + getLeftPos()
            + getRotation()
            + setId()
            + setTopPos()
            + setLeftPos()
            + setRotation()
            + equals()
            + hashCode()
            # canEqual()
            + toString()
        }
      }
    }
  }
  

  package nl.hhs.project.koffieapp.koffieapp {
    package nl.hhs.project.koffieapp.koffieapp.model {
      package nl.hhs.project.koffieapp.koffieapp.model.Canvas {
        class Chair {
            + Chair()
            + getUser()
            + setUser()
            + equals()
            + hashCode()
            # canEqual()
            + toString()
        }
      }
    }
  }
  

  package nl.hhs.project.koffieapp.koffieapp {
    package nl.hhs.project.koffieapp.koffieapp.model {
      package nl.hhs.project.koffieapp.koffieapp.model.Canvas {
        class CoffeeMachine {
            + CoffeeMachine()
            + equals()
            + hashCode()
            # canEqual()
            + toString()
        }
      }
    }
  }
  

  Canvas o-- Department : department
  Canvas o-- CoffeeMachine : coffeeMachine
  Chair -up-|> CanvasObject
  Chair o-- User : user
  CoffeeMachine -up-|> CanvasObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
